--- a/library.properties
+++ b/library.properties
@@ -2,8 +2,8 @@ name=Arduino_EdgeControl
 version=0.1.0
 author=Arduino
 maintainer=Arduino <info@arduino.cc>
-sentence=Board support package for Arduino Outdoor Carrier
-paragraph=This library includes support for Arduino Outdoor Carrier boards
+sentence=Board support package for Arduino Edge Control
+paragraph=This library includes support for Arduino Edge Control boards
 category=Display
 url=http://www.arduino.cc/en/Reference/Arduino_EdgeControl
-architectures=mbed
+architectures=mbed_edge
