--- a/library.properties
+++ b/library.properties
@@ -2,8 +2,9 @@ name=Arduino_EdgeControl
 version=0.1.0
 author=Arduino
 maintainer=Arduino <info@arduino.cc>
-sentence=Board support package for Arduino Edge Control
-paragraph=This library includes support for Arduino Edge Control boards
-category=Display
+sentence=Arduino Library for Arduino Edge Control
+paragraph=This library includes extended support for Arduino Edge Control boards and on-board devices
+category=Device Control
 url=http://www.arduino.cc/en/Reference/Arduino_EdgeControl
 architectures=mbed_edge
+includes=Arduino_EdgeControl.h
