Add mbed arch back

--- a/library.properties
+++ b/library.properties
@@ -6,5 +6,5 @@ sentence=Arduino Library for Arduino Edge Control
 paragraph=This library includes extended support for Arduino Edge Control boards and on-board devices
 category=Device Control
 url=http://www.arduino.cc/en/Reference/Arduino_EdgeControl
-architectures=mbed_edge
+architectures=mbed, mbed_edge
 includes=Arduino_EdgeControl.h
