--- a/library.properties
+++ b/library.properties
@@ -5,6 +5,6 @@ maintainer=Arduino <info@arduino.cc>
 sentence=Arduino Library for Arduino Edge Control
 paragraph=This library includes extended support for Arduino Edge Control boards and on-board devices
 category=Device Control
-url=http://www.arduino.cc/en/Reference/Arduino_EdgeControl
+url=https://github.com/arduino-libraries/Arduino_EdgeControl
 architectures=mbed, mbed_edge
 includes=Arduino_EdgeControl.h
