Fix regression re report-size-deltas after updating actions/upload-artifact.
For more information see https://github.com/arduino/report-size-deltas/blob/main/docs/FAQ.md#size-deltas-report-workflow-triggered-by-schedule-event .

--- a/.github/workflows/compile-examples.yml
+++ b/.github/workflows/compile-examples.yml
@@ -34,12 +34,10 @@ jobs:
 
       matrix:
         board:
-          # TODO: Add list of boards to compile for here:
           - fqbn: arduino:mbed_edge:edge_control
-            # TODO: Define the board's platform dependencies here.
-            # See: https://github.com/arduino/compile-sketches#platforms
             platforms: |
               - name: arduino:mbed_edge
+            artifact-name-suffix: arduino-mbed_edge-edge_control
 
     steps:
       - name: Checkout repository
@@ -72,4 +70,4 @@ jobs:
         with:
           if-no-files-found: error
           path: ${{ env.SKETCHES_REPORTS_PATH }}
-          name: ${{ env.SKETCHES_REPORTS_PATH }}
+          name: sketches-report-${{ matrix.board.artifact-name-suffix }}
